modified some of the website to say spot spotter

--- a/website/hackathonsite.html
+++ b/website/hackathonsite.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-        <title>parkingmate.com</title>
+        <title>spotspotter.com</title>
         <link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
@@ -12,7 +12,7 @@
                 <br>
                 <br>
                 <br>
-                <h1>Parking Mate</h1>
+                <h1>Spot Spotter</h1>
                 <a class="btn" href="parkingmate1.html">Get Started</a>
             </div>
         </div>
